--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.1.3
+  location: ^4.4.0
+  flutter_map: ^3.1.0
+  latlong2: ^0.8.1
+  go_router: ^6.0.1
+  vector_map_tiles: ^3.1.4
+  vector_tile_renderer: ^3.0.4
 
 dev_dependencies:
   flutter_test:
