--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   go_router: ^6.0.1
   vector_map_tiles: ^3.1.4
   vector_tile_renderer: ^3.0.4
+  image_picker: ^0.8.6
+  lottie: ^2.1.0
+  image: ^4.0.7
 
 dev_dependencies:
   flutter_test:
@@ -67,9 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
